--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   
       <div class="container mx-auto">
-          <h1 class="font-poppins text-center text-3xl font-bold pt-24">MyShop</h1>
+          <h1 class="font-poppins text-center text-3xl font-bold pt-24">E-commerce Duka</h1>
   
           
       </div>
