--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="catFacts">
         <header>
-            <h1>Get your random cat facts</h1>
+            <h1>Get your random cat facts in Ecommerce-duka</h1>
             <span>Information for this has been retreived from <a href="https://github.com/wh-iterabb-it/meowfacts">meowfacts.herokuapp.com</a></span>
         </header>
         
@@ -20,7 +20,7 @@
                 <label for="factInfo">Input number of facts you would like to retreive: </label>
                 <input id="fact" name="fact" type="number" placeholder="the number of facts">
                 <br>
-                <button type="button" id="getFact">get fruit information</button>
+                <button type="button" id="getFact">get cat information</button>
             </div>
 
         </div>
